// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module a {
  declare class A {}
  declare module.exports: typeof A;
}

=====================================output=====================================
declare module a {
  declare class A {}
  declare module.exports: typeof A;
}

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

declare module b {
  declare module.exports : number;
}

=====================================output=====================================
// @flow

declare module b {
  declare module.exports: number;
}

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module c {
  declare export type X = number;
  declare export type Y = string;
  declare module.exports : number;
}

=====================================output=====================================
declare module c {
  declare export type X = number;
  declare export type Y = string;
  declare module.exports: number;
}

================================================================================
`;
